sunscreen_frontend_macros/tests/compile_failures/self_arg.rs
use sunscreen_frontend_macros::{circuit};

struct Foo {}

impl Foo {
    #[circuit(scheme = "bfv")]
    fn panic_circuit(&self) {
    }
}

fn main() {
    
}