sunscreen_frontend_macros/tests/compile_failures/self_arg.stderr
error: circuits must not take a reference to self
   --> tests/compile_failures/self_arg.rs:6:5
    |
6   |       #[circuit(scheme = "bfv")]
    |       ^^^^^^^^^^^^^^^^^^^^^^^^^^ in this procedural macro expansion
    |
   ::: src/lib.rs
    |
    | / pub fn circuit(
    | |     metadata: proc_macro::TokenStream,
    | |     input: proc_macro::TokenStream,
    | | ) -> proc_macro::TokenStream {
    | |____________________________- in this expansion of `#[circuit]`
